Added description to metadata.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="icon" type="image/x-icon" href="images/favicon.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Abbie Wijnmaalen is een GZ Psycholoog ervaren met: Autisme, Persoonlijkheidsproblematiek, Hechting ,Depressie, Trauma, Piekeren, Angst, Faalangst. Veder geeft ze Consultaties voor bedrijven over autisme en is ze in te huren door GGZ instellingen."/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
