Added Freelance and Consultatie to Aanbod.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<ul>
 								<!-- <li><a href="#intro">Intro</a></li> -->
 								<li><a href="#visie">Visie</a></li>
-								<li><a href="#behandelaanbod">Behandelaanbod</a></li>
+								<li><a href="#aanbod">Aanbod</a></li>
 								<li><a href="#over">Over mij</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -82,12 +82,27 @@
 						</article>
 
 						<!-- Behandelaanbod -->
-							<article id="behandelaanbod">
-								<h2 class="major">Behandelaanbod</h2>
+							<article id="aanbod">
+								<ul class="actions">
+									<li><a href="#consultatie" class="button">Consultatie</a></li>
+									<li><a href="#freelance" class="button">Freelance</a></li>
+									<li><a href="#behandeling" class="button">Behandeling</a></li>
+								</ul>
+								<h2 class="major">Aanbod</h2>
 								<span class="image main"><img src="images/opmaat-cropped.jpg" alt="" /></span>
-								<h3>Behandeling op maat</h3>
-								<p>Ik biedt een persoonlijke aanpak die gericht is op het helpen van mensen om hun doelen te bereiken en een betere kwaliteit van leven te ervaren. Door rekening te houden met de unieke behoeften van elke persoon, kan een behandeling effectiever en duurzamer zijn.</p>
+								<h3 id="consultatie">Consultatie voor bedrijven over Autisme</h3>
+								Heb je medewerkers met autisme? Als GZ-psycholoog help ik bedrijven om de sterke punten van deze medewerkers te benutten en een werkomgeving te creëren waarin ze optimaal kunnen functioneren. Denk aan:
+								<ul class="">
+									<li>Diagnostiek en begeleiding</li>
+									<li>Trainingen voor leidinggevenden en collega's</li>
+									<li>Het creëren van een autismevriendelijke werkomgeving</li>
+								</ul>
 
+								<h3 id="freelance">Freelance</h3>
+								<p>Ben jij een GGZ-instelling op zoek naar een ervaren GZ-psycholoog? Ik ben beschikbaar voor diverse opdrachten. Flexibel inzetbaar en gespecialiseerd in Autisme en Persoonliljkheidsprobelmatiek. Neem contact met me op voor meer informatie.<p>
+
+								<h3 id="behandeling">Behandeling op maat</h3>
+								Ik bied een persoonlijke aanpak die gericht is op het helpen van mensen om hun doelen te bereiken en een betere kwaliteit van leven te ervaren. Door rekening te houden met de unieke behoeften van elke persoon, kan een behandeling effectiever en duurzamer zijn.
 								<div class="grid-wrapper">
 									<div class="grid-column">
 										<h3 class=""><i class="far fa-check-square fa-fw"></i><b>Behandel klachten geassocieerd met:</b></h3>
@@ -104,7 +119,7 @@
 									</div>
 									<div class="grid-column">
 										<h3 class=""><i class="fa fa-plus-square fa-fw"></i><b>Behandelaanbod</b></h3>
-										<p>Behandelmethoden die veel gebruikt worden.</p>
+										Behandelmethoden die veel gebruikt worden.
 										<ul class="">
 											<li><a href="https://nl.wikipedia.org/wiki/Eye_movement_desensitization_and_reprocessing">EMDR</a></li>
 											<li><a href="https://nl.wikipedia.org/wiki/Schematherapie">Schematherapie</a></li>
