added new email address.

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 							<div class="Major">
 								<i class="fa fa-map-marker fa-fw"></i>Nijmegen, NL<br>
 								<i class="fa fa-phone fa-fw"></i> Tel: <a href="tel:0611350413">06 113 504 13</a><br>
-								<i class="fa fa-envelope fa-fw"></i> Email: <a href="mailto:mail@mail.com">mail@mail.com</a>
+								<i class="fa fa-envelope fa-fw"></i> Email: <a href="mailto:info.onderwegnaar@gmail.com">info.onderwegnaar@gmail.com</a>
 								<br>
 								<br>
 							 </div>
