Overhall of Aanbod and Kosten en Vergoeding.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Onderweg</h1>
-								<p>Lorem ipsum dolor sit amet, ius cu soluta consequuntur, ad stet illud partiendo sed, cum sint natum accusam ea. Vim suscipit invenire ad. Ea putant aliquid eleifend ius. Velit elaboraret interesset ei vix, torquatos repudiandae no quo. At duis instructior vis. Eu eum graece explicari, singulis tacimates ex mei, ex iudicabit molestiae mea.Mucius constituto et usu. Sed ut vide erant tempor, duo cu falli possim dolorum. Est voluptua persecuti at, est ne euismod lucilius volutpat. Munere consectetuer cu sea, wisi iusto tollit ex sed. </p>
+								<p>“Onderweg zijn hoeft geen grote sprongen of einddoelen te betekenen; soms is een kleine beweging, een zachte verschuiving in gedachten of gevoelens, al genoeg om verandering in gang te zetten."</p>
 							</div>
 						</div>
 						<nav class="">
@@ -47,6 +47,11 @@
 								<li><a href="#contact">Contact</a></li>
 								<li><a href="#ervaring">Ervaring</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
+							</ul>
+						</nav>
+						<nav class="">
+							<ul>
+								<li><a href="#registraties">Registraties</a></li>
 							</ul>
 						</nav>
 				</header>
@@ -84,49 +89,56 @@
 						<!-- Behandelaanbod -->
 							<article id="aanbod">
 								<ul class="actions">
+									<li><a href="#psycho-educatie" class="button">Psycho-educatie en schooling</a></li>
 									<li><a href="#consultatie" class="button">Consultatie</a></li>
-									<li><a href="#freelance" class="button">Freelance</a></li>
-									<li><a href="#behandeling" class="button">Behandeling</a></li>
+									<li><a href="#behandeling" class="button">Specialistische Inzet</a></li>
 								</ul>
-								<h2 class="major">Aanbod</h2>
+								<h2 class="major">Specialistische Behandeling op Maat</h2>
 								<span class="image main"><img src="images/opmaat-cropped.jpg" alt="" /></span>
-								<h3 id="consultatie">Consultatie voor bedrijven over Autisme</h3>
-								Heb je medewerkers met autisme? Als GZ-psycholoog help ik bedrijven om de sterke punten van deze medewerkers te benutten en een werkomgeving te creëren waarin ze optimaal kunnen functioneren. Denk aan:
+								<h3 id="psycho-educatie">Psycho-educatie en schooling</h3>
+								Bent u op zoek naar een ervaren professional die psycho-educatie kan bieden over autisme en co-morbiditeit aan clienten/systeem/behandelaren/begeleiders? Ik ben inzetbaar voor instellingen, begeleidingsbureaus, en beschermd of begeleid woonsettings. Mijn expertise richt zich op het bieden van kennis en inzichten over autisme in combinatie met andere problematiek, zoals:
 								<ul class="">
-									<li>Diagnostiek en begeleiding</li>
-									<li>Trainingen voor leidinggevenden en collega's</li>
-									<li>Het creëren van een autismevriendelijke werkomgeving</li>
+									<li>Depressie</li>
+									<li>Hechtingsproblematiek</li>
+									<li>Persoonlijkheidsdynamiek</li>
+									<li>Angst en Dwangstoornissen</li>
+									<li>Trauma</li>
 								</ul>
 
-								<h3 id="freelance">Freelance</h3>
-								<p>Ben jij een GGZ-instelling op zoek naar een ervaren GZ-psycholoog? Ik ben beschikbaar voor diverse opdrachten. Flexibel inzetbaar en gespecialiseerd in Autisme en Persoonlijkheidsproblematiek. Neem contact met me op voor meer informatie.<p>
+								<h3 id="consultatie">Consultatie bij Complexe Casussen</h3>
+								Heeft uw team te maken met complexe casussen waarin cliënten met autisme vastlopen? Ik bied consultatie aan teams en begeleiders/behandelaren die te maken hebben met clienten met autisme en hun uitdagende problematiek. We gaan samen zoeken naar nieuwe perspectieven en passende interventies. Dit kan variëren van eenmalige adviezen tot een intensievere samenwerking bij langdurige casuïstiek.
+								<ul class="">
+									<li>Behandeling en begeleiding van cliënten met complexe psychiatrische problematiek</li>
+									<li>Ondersteuning bij hoge werkdruk, complexe casuïstiek of vastgelopen trajecten</li>
+									<li>Tijdelijke vervanging of aanvullende expertise op projectbasis</li>
+									<li>Angst en Dwangstoornissen</li>
+									<li>Trauma</li>
+								</ul>
 
-								<h3 id="behandeling">Behandeling op maat</h3>
-								Ik bied een persoonlijke aanpak die gericht is op het helpen van mensen om hun doelen te bereiken en een betere kwaliteit van leven te ervaren. Door rekening te houden met de unieke behoeften van elke persoon, kan een behandeling effectiever en duurzamer zijn.
+								<h3 id="behandeling">Specialistische Inzet voor GGZ Instellingen</h3>
+								Ik ben beschikbaar voor tijdelijke inzet binnen specialistische GGZ-instellingen.<br>
+								Bent u op zoek naar een ervaren gz- psycholoog en/of regiebehandelaar die ondersteuning kan bieden bij de behandeling en begeleiding van mensen met complexe psychiatrische problematiek?<br>
+								Naast mijn expertise in autisme bied ik mijn diensten aan voor cliënten zonder autisme, waarbij ik me richt op diverse complexe problematieken.
 								<div class="grid-wrapper">
 									<div class="grid-column">
 										<h3 class=""><i class="far fa-check-square fa-fw"></i><b>Behandel klachten geassocieerd met:</b></h3>
 										<ul class="">
-											<li>Autisme</li>
-											<li>Persoonlijkheidsproblematiek</li>
-											<li>Hechting</li>
-											<li>Depressie</li>
-											<li>Trauma</li>
-											<li>Piekeren</li>
-											<li>Angst</li>
-											<li>Faalangst</li>
+											<li>Behandeling en begeleiding van cliënten met complexe psychiatrische problematiek</li>
+											<li>Diagnostiek en/of second opinion gericht op autisme</li>
+											<li>Ondersteuning bij hoge werkdruk, complexe casuïstiek of vastgelopen trajecten</li>
+											<li>Tijdelijke vervanging of aanvullende expertise op projectbasis</li>
 										</ul>
 									</div>
 									<div class="grid-column">
-										<h3 class=""><i class="fa fa-plus-square fa-fw"></i><b>Behandelaanbod</b></h3>
-										Behandelmethoden die veel gebruikt worden.
+										<h3 class=""><i class="fa fa-plus-square fa-fw"></i><b>Behandeling die ik Bied</b></h3>
+										Ik bied gespecialiseerde behandelingen die aansluiten bij de behoeften van cliënten met complexe psychiatrische problematiek. Deze behandelingen omvatten:
 										<ul class="">
-											<li><a href="https://nl.wikipedia.org/wiki/Eye_movement_desensitization_and_reprocessing">EMDR</a></li>
-											<li><a href="https://nl.wikipedia.org/wiki/Schematherapie">Schematherapie</a></li>
-											<li><a href="https://nl.wikipedia.org/wiki/Dialectische_gedragstherapie">Dialectische gedragstherapie</a></li>
-											<li><a href="https://nl.wikipedia.org/wiki/Cognitieve_gedragstherapie">Cognitieve gedragstherapie (CGT)</a></li>
-											<li>Intensieve traumabehandeling</li>
+											<li><a href="https://nl.wikipedia.org/wiki/Schematherapie">Schematherapie:</a> Voor het doorbreken van hardnekkige patronen en het versterken van de gezonde volwassene.</li>
+											<li><a href="https://nl.wikipedia.org/wiki/Eye_movement_desensitization_and_reprocessing">EMDR (Eye Movement Desensitization and Reprocessing):</a> Voor de verwerking van traumatische gebeurtenissen en het verminderen van emotionele lading.</li>
+											<li><a href="https://nl.wikipedia.org/wiki/Acceptance_and_commitment_therapy">ACT (Acceptance and Commitment Therapy)</a> Om cliënten te helpen meer in het hier en nu te leven en veerkracht te ontwikkelen.</li>
+											<li><a href="https://nl.wikipedia.org/wiki/Dialectische_gedragstherapie">DGT (Dialectische Gedragstherapie)</a> Gericht op emotieregulatie, interpersoonlijke effectiviteit en het verminderen van destructief gedrag.</li>
 										</ul>
+										Mijn aanpak is persoonlijk, intensief en gericht op het doorbreken van vastgelopen behandeltrajecten en het bieden van intensieve, op maat gemaakte ondersteuning volgens de visie zoals beschreven op mijn website (zie <a href="#visie">Visie</a>).
 									</div>
 									<div class="grid-column">
 										<ul class="actions">
@@ -148,40 +160,29 @@
 						<!-- Publicaties -->
 							<article id="kostenenvergoedingen">
 								<h2 class="major">Kosten en vergoeding</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
-								<span class="image right"><img src="images/pic02.jpg" alt="" /></span>
-								<h3 class="major">Contracten</h3>
-								<p>In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero.</p>
-								<ul>
-									<li>Dolor pulvinar etiam.</li>
-									<li>Sagittis adipiscing.</li>
-									<li>Felis enim feugiat.</li>
-								</ul>
-								<h3 class="major">Stichting 1nP</h3>
-								<p>In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero.</p>
-								<h3 class="major">Eigen Risico</h3>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
+								<span class="image main"><img src="images/kostenenvergoeding.jpg" alt="" /></span>
+								<p>Hier vind je mijn tarieven en pakketten. Ik geloof in eerlijkheid en transparantie, zodat je precies weet waar je aan toe bent.</p>
+								<h3 class="major">Specialistische inzet als gz-psycholoog/regie behandelaar</h3>
+								<p>Mijn tarieven beginnen bij € 120 per uur, afhankelijk van de omvang en duur van de opdracht.</p>
+								<h3 class="major">Psycho educatie en scholing</h3>
+								Voor een project zoals dit ligt de investering vanaf € 250 afhankelijk van de duur en de frequentie van de bijeenkomsten.
 
-								<hr>
-								<h2 class="">
-									<em>“Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum”.</em>
-								</h2>
-								<div class="grid-wrapper">
-									<div class="grid-column">
-										<h2 class=""><b>Registraties</b></h3>
-										<ul>
-											<li>KVK-nummer: 76347176</li>
-											<li>BIG registratie: 19926647225</li>
-											<li>AGB zorgverlening: 94106429</li>
-											<li>AGB eigenaar: 94065179</li>
-										</ul>
-									</div>
-									<div class="grid-column">
-										Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.
-									</div>
-								</div>
+								<ul>
+									<li>Bij een opdracht van 2 uur wordt een bedrag berekend van € 250.</li>
+									<li>Bij een opdracht van een dagdeel van 4 uur wordt een bedrag berekend van € 400.</li>
+									<li>Bij een opdracht van meer dan 4 uur wordt er een offerte op maat gemaakt in afstemming met elkaar.</li>
+								</ul>
+
+								<h3 class="major">Consultatie bij complexe casussen</h3>
+								<p>Voor een project zoals dit ligt de investering vanaf € 250 afhankelijk van de duur en de frequentie van de bijeenkomsten.</p>
+
+								<h3 class="major">Reiskosten</h3>
+								Voor een project zoals dit ligt de investering vanaf € 250 afhankelijk van de duur en de frequentie van de bijeenkomsten.
+								<ul>
+									<li>De tarieven zijn exclusief reiskosten en die bedragen € 0.25 per kilometer zowel binnen als buiten de regio.</li>
+									<li>Prijzen kunnen variëren afhankelijk van de specifieke wensen of complexiteit van de opdracht.</li>
+									<li>Alle genoemde prijzen zijn inclusief btw, tenzij anders vermeld.</li>
+								</ul>
 							</article>
 
 						<!-- ERvaring oud-->
@@ -410,6 +411,19 @@
 								<li>Bereidheid Om Te Ontwikkelen</li>
 							</ul>
 	
+						</article>
+
+						<!-- Registraties -->
+						<article id="registraties">
+							<h2 class="major">Registraties</h2>
+							<div class="Major">
+								<ul>
+									<li>KVK-nummer: 76347176</li>
+									<li>BIG registratie: 19926647225</li>
+									<li>AGB zorgverlening: 94106429</li>
+									<li>AGB eigenaar: 94065179</li>
+								</ul>
+							 </div>
 						</article>
 
 						<!-- Contact -->
