--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 						<!-- Visie -->
 						<article id="visie">
-							<h2 class="major">Visie</h2>
+							<h2 class="minor">Visie</h2>
 							<span class="image main"><img src="images/bospad.jpg" alt="" /></span>
 							<h2 class="">
 								<em>“Onderweg”</em>
@@ -93,7 +93,7 @@
 									<li><a href="#consultatie" class="button">Consultatie</a></li>
 									<li><a href="#behandeling" class="button">Specialistische Inzet</a></li>
 								</ul>
-								<h2 class="major">Specialistische Behandeling op Maat</h2>
+								<h2 class="minor">Specialistische Behandeling op Maat</h2>
 								<span class="image main"><img src="images/opmaat-cropped.jpg" alt="" /></span>
 								<h3 id="psycho-educatie">Psycho-educatie en schooling</h3>
 								Bent u op zoek naar een ervaren professional die psycho-educatie kan bieden over autisme en co-morbiditeit aan clienten/systeem/behandelaren/begeleiders? Ik ben inzetbaar voor instellingen, begeleidingsbureaus, en beschermd of begeleid woonsettings. Mijn expertise richt zich op het bieden van kennis en inzichten over autisme in combinatie met andere problematiek, zoals:
@@ -150,7 +150,7 @@
 
 						<!-- Over mij -->
 							<article id="over">
-								<h2 class="major">Over mij</h2>
+								<h2 class="minor">Over mij</h2>
 								<span class="image left"><img src="images/profielfoto.jpg" alt="" /></span>
 								<p>Als moeder en partner hecht ik veel waarde aan warmte en verbinding, zowel binnen mijn gezin als met familie en vrienden. Voor mij is een sterke band gebaseerd op liefde, aandacht en begrip, en ik geniet ervan om tijd en energie te steken in het onderhouden van die relaties. Ik vind het belangrijk dat mensen zich gezien en gehoord voelen, of dat nu thuis, in mijn werk, of in mijn sociale kring is.</p>
 								<p>In mijn werk draag ik diezelfde waarden uit. Ik werk met toewijding en empathie, en blijf standvastig, zelfs in uitdagende situaties. Samenwerken en gelijkwaardig contact om in beweging te komen, is voor mij essentieel.</p>
@@ -159,12 +159,12 @@
 
 						<!-- Publicaties -->
 							<article id="kostenenvergoedingen">
-								<h2 class="major">Kosten en vergoeding</h2>
+								<h2 class="minor">Kosten en vergoeding</h2>
 								<span class="image main"><img src="images/kostenenvergoeding.jpg" alt="" /></span>
 								<p>Hier vind je mijn tarieven en pakketten. Ik geloof in eerlijkheid en transparantie, zodat je precies weet waar je aan toe bent.</p>
-								<h3 class="major">Specialistische inzet als gz-psycholoog/regie behandelaar</h3>
+								<h3>Specialistische inzet als gz-psycholoog/regie behandelaar</h3>
 								<p>Mijn tarieven beginnen bij € 120 per uur, afhankelijk van de omvang en duur van de opdracht.</p>
-								<h3 class="major">Psycho educatie en scholing</h3>
+								<h3>Psycho educatie en scholing</h3>
 								Voor een project zoals dit ligt de investering vanaf € 250 afhankelijk van de duur en de frequentie van de bijeenkomsten.
 
 								<ul>
@@ -173,10 +173,10 @@
 									<li>Bij een opdracht van meer dan 4 uur wordt er een offerte op maat gemaakt in afstemming met elkaar.</li>
 								</ul>
 
-								<h3 class="major">Consultatie bij complexe casussen</h3>
+								<h3>Consultatie bij complexe casussen</h3>
 								<p>Voor een project zoals dit ligt de investering vanaf € 250 afhankelijk van de duur en de frequentie van de bijeenkomsten.</p>
 
-								<h3 class="major">Reiskosten</h3>
+								<h3>Reiskosten</h3>
 								Voor een project zoals dit ligt de investering vanaf € 250 afhankelijk van de duur en de frequentie van de bijeenkomsten.
 								<ul>
 									<li>De tarieven zijn exclusief reiskosten en die bedragen € 0.25 per kilometer zowel binnen als buiten de regio.</li>
@@ -242,7 +242,7 @@
 								<li><a href="#Ervaring" class="button">Ervaring</a></li>
 								<li><a href="#Vaardigheden" class="button">Vaardigheden</a></li>
 							</ul>
-							<h2 id="Opleiding" class="major"><i class="fa fa-certificate fa-fw"></i>Opleiding</h2>
+							<h2 id="Opleiding" class="minor"><i class="fa fa-certificate fa-fw"></i>Opleiding</h2>
 
 							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>2022 - 2023</h5> 
 							<h4 class=""><b>Opleiding schematherapie; basis en gevorderde</b></h4>
@@ -276,7 +276,7 @@
 							<h4 class=""><b>Propedeuse: Sociaal Pedagogische Hulpverlening</b></h4>
 							<h4 class="lower-case">HBO - 's-Gravenhave</h4>
 							<br>
-							<h2 id="Ervaring" class="major"><i class="fa fa-suitcase fa-fw"></i>Ervaring</h2>
+							<h2 id="Ervaring" class="minor"><i class="fa fa-suitcase fa-fw"></i>Ervaring</h2>
 
 							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>01/2024 - Heden</h5> 
 							<h3 class=""><b>GZ Psycholoog, Therapeut</b></h3>
@@ -392,7 +392,7 @@
 								interventies. Het voeren van gesprekken, adviseren van cliënt en ouders
 								en betrekken van ouders bij de behandeling.</p>
 
-							<h2 id="Vaardigheden" class="major"><i class="fa fa-asterisk fa-fw"></i>Vaardigheden</h2>
+							<h2 id="Vaardigheden" class="minor"><i class="fa fa-asterisk fa-fw"></i>Vaardigheden</h2>
 							<ul class="">
 								<li>Betrokken</li>
 								<li>Sociaal Intelligent</li>
@@ -415,7 +415,7 @@
 
 						<!-- Registraties -->
 						<article id="registraties">
-							<h2 class="major">Registraties</h2>
+							<h2 class="minor">Registraties</h2>
 							<div class="Major">
 								<ul>
 									<li>KVK-nummer: 76347176</li>
@@ -428,7 +428,7 @@
 
 						<!-- Contact -->
 						<article id="contact">
-							<h2 class="major">Contact</h2>
+							<h2 class="minor">Contact</h2>
 							<div class="Major">
 								<i class="fa fa-map-marker fa-fw"></i>Nijmegen, NL<br>
 								<i class="fa fa-phone fa-fw"></i> Tel: <a href="tel:0611350413">06 113 504 13</a><br>
