Fixed misalignment in aanbod.

--- a/index.html
+++ b/index.html
@@ -138,13 +138,11 @@
 											<li><a href="https://nl.wikipedia.org/wiki/Acceptance_and_commitment_therapy">ACT (Acceptance and Commitment Therapy)</a> Om cliënten te helpen meer in het hier en nu te leven en veerkracht te ontwikkelen.</li>
 											<li><a href="https://nl.wikipedia.org/wiki/Dialectische_gedragstherapie">DGT (Dialectische Gedragstherapie)</a> Gericht op emotieregulatie, interpersoonlijke effectiviteit en het verminderen van destructief gedrag.</li>
 										</ul>
-										Mijn aanpak is persoonlijk, intensief en gericht op het doorbreken van vastgelopen behandeltrajecten en het bieden van intensieve, op maat gemaakte ondersteuning volgens de visie zoals beschreven op mijn website (zie <a href="#visie">Visie</a>).
 									</div>
-									<div class="grid-column">
-										<ul class="actions">
-											<li><a href="#contact" class="button">Contact</a></li>
-										</ul>
-									</div>
+									<p>Mijn aanpak is persoonlijk, intensief en gericht op het doorbreken van vastgelopen behandeltrajecten en het bieden van intensieve, op maat gemaakte ondersteuning volgens de visie zoals beschreven op mijn website (zie <a href="#visie">Visie</a>).</p>
+									<ul class="actions">
+										<li><a href="#contact" class="button">Contact</a></li>
+									</ul>
 								</div>
 							</article>
 
