Added Contact butto to Kosten en vergoedingen.

--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
 									<li>Prijzen kunnen variëren afhankelijk van de specifieke wensen of complexiteit van de opdracht.</li>
 									<li>Alle genoemde prijzen zijn inclusief btw, tenzij anders vermeld.</li>
 								</ul>
+								<ul class="actions">
+									<li><a href="#contact" class="button">Contact</a></li>
+								</ul>
 							</article>
 
 						<!-- ERvaring oud-->
