Replaced prices with [TB]

--- a/index.html
+++ b/index.html
@@ -161,23 +161,23 @@
 								<span class="image main"><img src="images/kostenenvergoeding.jpg" alt="" /></span>
 								<p>Hier vind je mijn tarieven en pakketten. Ik geloof in eerlijkheid en transparantie, zodat je precies weet waar je aan toe bent.</p>
 								<h3>Specialistische inzet als gz-psycholoog/regie behandelaar</h3>
-								<p>Mijn tarieven beginnen bij € 120 per uur, afhankelijk van de omvang en duur van de opdracht.</p>
+								<p>Mijn tarieven beginnen bij € [TB] per uur, afhankelijk van de omvang en duur van de opdracht.</p>
 								<h3>Psycho educatie en scholing</h3>
-								Voor een project zoals dit ligt de investering vanaf € 250 afhankelijk van de duur en de frequentie van de bijeenkomsten.
+								Voor een project zoals dit ligt de investering vanaf € [TB] afhankelijk van de duur en de frequentie van de bijeenkomsten.
 
 								<ul>
-									<li>Bij een opdracht van 2 uur wordt een bedrag berekend van € 250.</li>
-									<li>Bij een opdracht van een dagdeel van 4 uur wordt een bedrag berekend van € 400.</li>
+									<li>Bij een opdracht van 2 uur wordt een bedrag berekend van € [TB].</li>
+									<li>Bij een opdracht van een dagdeel van 4 uur wordt een bedrag berekend van € [TB].</li>
 									<li>Bij een opdracht van meer dan 4 uur wordt er een offerte op maat gemaakt in afstemming met elkaar.</li>
 								</ul>
 
 								<h3>Consultatie bij complexe casussen</h3>
-								<p>Voor een project zoals dit ligt de investering vanaf € 250 afhankelijk van de duur en de frequentie van de bijeenkomsten.</p>
+								<p>Voor een project zoals dit ligt de investering vanaf € [TB] afhankelijk van de duur en de frequentie van de bijeenkomsten.</p>
 
 								<h3>Reiskosten</h3>
-								Voor een project zoals dit ligt de investering vanaf € 250 afhankelijk van de duur en de frequentie van de bijeenkomsten.
+								Voor een project zoals dit ligt de investering vanaf € [TB] afhankelijk van de duur en de frequentie van de bijeenkomsten.
 								<ul>
-									<li>De tarieven zijn exclusief reiskosten en die bedragen € 0.25 per kilometer zowel binnen als buiten de regio.</li>
+									<li>De tarieven zijn exclusief reiskosten en die bedragen € [TB] per kilometer zowel binnen als buiten de regio.</li>
 									<li>Prijzen kunnen variëren afhankelijk van de specifieke wensen of complexiteit van de opdracht.</li>
 									<li>Alle genoemde prijzen zijn inclusief btw, tenzij anders vermeld.</li>
 								</ul>
