Added attribution for summer background.

--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<!-- Footer -->
 					<footer id="footer">
 						<p class="copyright">&copy; Abbie Wijnmaalen. Design: <a href="https://html5up.net">HTML5 UP</a>.<br>
-						Afbeelding: <a target="_blank" href="https://pikwizard.com/photo/person-in-beanie-jacket-looking-at-foggy-mountain-landscape/9c935cd764c671ba9f8d09fa6ef1b335/">PikWizard</a> </p>
+						Afbeelding: <a target="_blank" href="https://pikwizard.com/photo/person-in-beanie-jacket-looking-at-foggy-mountain-landscape/9c935cd764c671ba9f8d09fa6ef1b335/">PikWizard</a> & <a href="https://www.vecteezy.com/photo/35759157-ai-generated-beautiful-young-woman-with-long-curly-hair-in-a-red-dress-on-the-background-of-nature-beautiful-young-woman-with-long-hair-viewed-from-the-rear-ai-generated">Vecteezy</a> </p>
 					</footer>
 			</div>
 
