Opmerkingen partner deel 1.

--- a/index.html
+++ b/index.html
@@ -89,13 +89,42 @@
 						<!-- Behandelaanbod -->
 							<article id="aanbod">
 								<ul class="actions">
-									<li><a href="#psycho-educatie" class="button">Psycho-educatie en schooling</a></li>
+									<li><a href="#behandeling" class="button">Inzet GGZ</a></li>
+									<li><a href="#particulier" class="button">Particulier</a></li>
+									<li><a href="#psycho-educatie" class="button">Psycho-educatie en scholing</a></li>
 									<li><a href="#consultatie" class="button">Consultatie</a></li>
-									<li><a href="#behandeling" class="button">Specialistische Inzet</a></li>
 								</ul>
 								<h2 class="minor">Specialistische Behandeling op Maat</h2>
 								<span class="image main"><img src="images/opmaat-cropped.jpg" alt="" /></span>
-								<h3 id="psycho-educatie">Psycho-educatie en schooling</h3>
+
+								<h3 id="behandeling">Inzet voor GGZ Instellingen</h3>
+								Ik ben beschikbaar voor tijdelijke inzet binnen specialistische GGZ-instellingen of andere locaties.<br>
+								Bent u op zoek naar een ervaren gz- psycholoog en/of regiebehandelaar die ondersteuning kan bieden bij de behandeling en begeleiding van mensen met complexe psychiatrische problematiek?<br>
+								Naast mijn expertise in autisme bied ik mijn diensten aan voor cliënten zonder autisme, waarbij ik me richt op diverse complexe problematieken.
+								<div class="grid-wrapper">
+									<div class="grid-column">
+										<h3 class=""><i class="far fa-check-square fa-fw"></i><b>Behandel klachten geassocieerd met:</b></h3>
+										<ul class="">
+											<li>Behandeling en begeleiding van cliënten met complexe psychiatrische problematiek</li>
+											<li>Diagnostiek en/of second opinion gericht op autisme</li>
+											<li>Ondersteuning bij hoge werkdruk, complexe casuïstiek of vastgelopen trajecten</li>
+											<li>Tijdelijke vervanging of aanvullende expertise op projectbasis</li>
+										</ul>
+									</div>
+									<div class="grid-column">
+										<h3 class=""><i class="fa fa-plus-square fa-fw"></i><b>Aangebode behandelingen</b></h3>
+										Ik bied gespecialiseerde behandelingen die aansluiten bij de behoeften van cliënten met complexe psychiatrische problematiek. Deze behandelingen omvatten:
+										<ul class="">
+											<li><a href="https://nl.wikipedia.org/wiki/Schematherapie">Schematherapie:</a> Voor het doorbreken van hardnekkige patronen en het versterken van de gezonde volwassene.</li>
+											<li><a href="https://nl.wikipedia.org/wiki/Eye_movement_desensitization_and_reprocessing">EMDR (Eye Movement Desensitization and Reprocessing):</a> Voor de verwerking van traumatische gebeurtenissen en het verminderen van emotionele lading.</li>
+											<li><a href="https://nl.wikipedia.org/wiki/Acceptance_and_commitment_therapy">ACT (Acceptance and Commitment Therapy)</a> Cliënten worden geholpen meer in het hier en nu te leven en veerkracht te ontwikkelen.</li>
+											<li><a href="https://nl.wikipedia.org/wiki/Dialectische_gedragstherapie">DGT (Dialectische Gedragstherapie)</a> Gericht op emotieregulatie, interpersoonlijke effectiviteit en het verminderen van destructief gedrag.</li>
+										</ul>
+									</div>
+									<p>Mijn aanpak is persoonlijk, intensief en gericht op het doorbreken van vastgelopen behandeltrajecten en het bieden van intensieve, op maat gemaakte ondersteuning volgens de visie zoals beschreven op mijn website (zie <a href="#visie">Visie</a>).</p>
+								</div>
+
+								<h3 id="psycho-educatie">Psycho-educatie en scholing</h3>
 								Bent u op zoek naar een ervaren professional die psycho-educatie kan bieden over autisme en co-morbiditeit aan clienten/systeem/behandelaren/begeleiders? Ik ben inzetbaar voor instellingen, begeleidingsbureaus, en beschermd of begeleid woonsettings. Mijn expertise richt zich op het bieden van kennis en inzichten over autisme in combinatie met andere problematiek, zoals:
 								<ul class="">
 									<li>Depressie</li>
@@ -115,35 +144,10 @@
 									<li>Trauma</li>
 								</ul>
 
-								<h3 id="behandeling">Specialistische Inzet voor GGZ Instellingen</h3>
-								Ik ben beschikbaar voor tijdelijke inzet binnen specialistische GGZ-instellingen.<br>
-								Bent u op zoek naar een ervaren gz- psycholoog en/of regiebehandelaar die ondersteuning kan bieden bij de behandeling en begeleiding van mensen met complexe psychiatrische problematiek?<br>
-								Naast mijn expertise in autisme bied ik mijn diensten aan voor cliënten zonder autisme, waarbij ik me richt op diverse complexe problematieken.
-								<div class="grid-wrapper">
-									<div class="grid-column">
-										<h3 class=""><i class="far fa-check-square fa-fw"></i><b>Behandel klachten geassocieerd met:</b></h3>
-										<ul class="">
-											<li>Behandeling en begeleiding van cliënten met complexe psychiatrische problematiek</li>
-											<li>Diagnostiek en/of second opinion gericht op autisme</li>
-											<li>Ondersteuning bij hoge werkdruk, complexe casuïstiek of vastgelopen trajecten</li>
-											<li>Tijdelijke vervanging of aanvullende expertise op projectbasis</li>
-										</ul>
-									</div>
-									<div class="grid-column">
-										<h3 class=""><i class="fa fa-plus-square fa-fw"></i><b>Behandeling die ik Bied</b></h3>
-										Ik bied gespecialiseerde behandelingen die aansluiten bij de behoeften van cliënten met complexe psychiatrische problematiek. Deze behandelingen omvatten:
-										<ul class="">
-											<li><a href="https://nl.wikipedia.org/wiki/Schematherapie">Schematherapie:</a> Voor het doorbreken van hardnekkige patronen en het versterken van de gezonde volwassene.</li>
-											<li><a href="https://nl.wikipedia.org/wiki/Eye_movement_desensitization_and_reprocessing">EMDR (Eye Movement Desensitization and Reprocessing):</a> Voor de verwerking van traumatische gebeurtenissen en het verminderen van emotionele lading.</li>
-											<li><a href="https://nl.wikipedia.org/wiki/Acceptance_and_commitment_therapy">ACT (Acceptance and Commitment Therapy)</a> Om cliënten te helpen meer in het hier en nu te leven en veerkracht te ontwikkelen.</li>
-											<li><a href="https://nl.wikipedia.org/wiki/Dialectische_gedragstherapie">DGT (Dialectische Gedragstherapie)</a> Gericht op emotieregulatie, interpersoonlijke effectiviteit en het verminderen van destructief gedrag.</li>
-										</ul>
-									</div>
-									<p>Mijn aanpak is persoonlijk, intensief en gericht op het doorbreken van vastgelopen behandeltrajecten en het bieden van intensieve, op maat gemaakte ondersteuning volgens de visie zoals beschreven op mijn website (zie <a href="#visie">Visie</a>).</p>
-									<ul class="actions">
-										<li><a href="#contact" class="button">Contact</a></li>
-									</ul>
-								</div>
+								<ul class="actions">
+									<li><a href="#contact" class="button">Contact</a></li>
+								</ul>
+
 							</article>
 
 						<!-- Over mij -->
@@ -334,12 +338,7 @@
 								ambulant te behandelen, om opname te voorkomen. Ook treed ik op als
 								interne en externe consultant bij casussen waar de client met autisme in
 								crisis verkeert. Binnen de CIBA ben ik onderdeel van het
-								managementteam en begeleid ik psychologen in opleiding. Als extra
-								werkzaamheden ben ik kartrekker van de werkgroep ,,implementatie van
-								de functie ervaringsdeskundige binnen het Dokter Leo Kannerhuis”. Ik
-								ben onderdeel van de werkgroep ,,separeer-vrij 2020”. Deze werkgroep
-								heeft als doel, een passende behandeling te creëren, zodat de client niet
-								meer gesepareerd hoeft te worden.</p>
+								managementteam en begeleid ik psychologen in opleiding.</p>
 
 							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>01/2017 - 04/2019</h5> 
 							<h3 class=""><b>Orthopedagoog i.o. tot GZ Psycholoog</b></h3>
