Opmerkingen partner deel 2.

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 								<h2 class="minor">Specialistische Behandeling op Maat</h2>
 								<span class="image main"><img src="images/opmaat-cropped.jpg" alt="" /></span>
 
-								<h3 id="behandeling">Inzet voor GGZ Instellingen</h3>
-								Ik ben beschikbaar voor tijdelijke inzet binnen specialistische GGZ-instellingen of andere locaties.<br>
+								<h3 id="behandeling">Inzet voor zorg Instellingen</h3>
+								Ik ben beschikbaar voor tijdelijke inzet binnen specialistische GGZ- of andere zorg-instellingen (bijvoorbeeld: ambulante begeleidingsbureau's of beschermd wonen instellingen).<br>
 								Bent u op zoek naar een ervaren gz- psycholoog en/of regiebehandelaar die ondersteuning kan bieden bij de behandeling en begeleiding van mensen met complexe psychiatrische problematiek?<br>
 								Naast mijn expertise in autisme bied ik mijn diensten aan voor cliënten zonder autisme, waarbij ik me richt op diverse complexe problematieken.
 								<div class="grid-wrapper">
@@ -123,6 +123,9 @@
 									</div>
 									<p>Mijn aanpak is persoonlijk, intensief en gericht op het doorbreken van vastgelopen behandeltrajecten en het bieden van intensieve, op maat gemaakte ondersteuning volgens de visie zoals beschreven op mijn website (zie <a href="#visie">Visie</a>).</p>
 								</div>
+
+								<h3 id="particulier">Particulier</h3>
+								<p>Individueel bied ik laagdrempelige hulp aan mensen met veel voorkomende milde psychische klachten. Ik behandel hierin kortdurend, dat wil zeggen, vijf tot acht gesprekken die zich richten op vermindering van de klachten en verbeteren van het dagelijks functioneren. Deze gesprekken vinden plaats tijdens een wandeling. Het pluspunt van de wandeling zit in de rust en ontspanning, een gevoel van vrijheid en ruimtelijkheid en het feit dat mensen buiten makkelijker praten.</p>
 
 								<h3 id="psycho-educatie">Psycho-educatie en scholing</h3>
 								Bent u op zoek naar een ervaren professional die psycho-educatie kan bieden over autisme en co-morbiditeit aan clienten/systeem/behandelaren/begeleiders? Ik ben inzetbaar voor instellingen, begeleidingsbureaus, en beschermd of begeleid woonsettings. Mijn expertise richt zich op het bieden van kennis en inzichten over autisme in combinatie met andere problematiek, zoals:
@@ -163,28 +166,16 @@
 							<article id="kostenenvergoedingen">
 								<h2 class="minor">Kosten en vergoeding</h2>
 								<span class="image main"><img src="images/kostenenvergoeding.jpg" alt="" /></span>
-								<p>Hier vind je mijn tarieven en pakketten. Ik geloof in eerlijkheid en transparantie, zodat je precies weet waar je aan toe bent.</p>
-								<h3>Specialistische inzet als gz-psycholoog/regie behandelaar</h3>
-								<p>Mijn tarieven beginnen bij € [TB] per uur, afhankelijk van de omvang en duur van de opdracht.</p>
-								<h3>Psycho educatie en scholing</h3>
-								Voor een project zoals dit ligt de investering vanaf € [TB] afhankelijk van de duur en de frequentie van de bijeenkomsten.
 
-								<ul>
-									<li>Bij een opdracht van 2 uur wordt een bedrag berekend van € [TB].</li>
-									<li>Bij een opdracht van een dagdeel van 4 uur wordt een bedrag berekend van € [TB].</li>
-									<li>Bij een opdracht van meer dan 4 uur wordt er een offerte op maat gemaakt in afstemming met elkaar.</li>
-								</ul>
+								<h3>Particulier</h3>
+								<p>Kosten voor particuliere gesprekken worden berekend op basis van een vooraf overeengekomen uurtarief.</p>
 
-								<h3>Consultatie bij complexe casussen</h3>
-								<p>Voor een project zoals dit ligt de investering vanaf € [TB] afhankelijk van de duur en de frequentie van de bijeenkomsten.</p>
+								<h3>Opdrachten, Psycho-educatie, scholingen en consultatie</h3>
+							    <p>Voor opdrachten, psycho-educatie, scholingen en consultaties verzorgen wij altijd een offerte gebaseerd op de aard van de opdracht (bijvoorbeeld individuele begeleiding of groepstrainingen) en het gevraagde specialisme (bijvoorbeeld autisme of persoonlijkheidsproblematiek). Opdrachten die van kortere duur zijn, zoals een consultatie, worden berekend op basis van een overeengekomen uurtarief. Langer lopende opdrachten, zoals een trainingstraject, kunnen ook voor een all-in bedrag worden berekend. Dit all-in bedrag is inclusief (bijvoorbeeld: voorbereiding, materiaal en reiskosten).</p>
 
 								<h3>Reiskosten</h3>
-								Voor een project zoals dit ligt de investering vanaf € [TB] afhankelijk van de duur en de frequentie van de bijeenkomsten.
-								<ul>
-									<li>De tarieven zijn exclusief reiskosten en die bedragen € [TB] per kilometer zowel binnen als buiten de regio.</li>
-									<li>Prijzen kunnen variëren afhankelijk van de specifieke wensen of complexiteit van de opdracht.</li>
-									<li>Alle genoemde prijzen zijn inclusief btw, tenzij anders vermeld.</li>
-								</ul>
+								<p>De reiskosten bedragen € 0.25 per kilometer zowel binnen als buiten de regio.</p>
+
 								<ul class="actions">
 									<li><a href="#contact" class="button">Contact</a></li>
 								</ul>
