Added ACT training.

--- a/index.html
+++ b/index.html
@@ -240,6 +240,10 @@
 							</ul>
 							<h2 id="Opleiding" class="minor"><i class="fa fa-certificate fa-fw"></i>Opleiding</h2>
 
+							<h5 class="float-right margin-right"> <i class="fa fa-calendar fa-fw "></i>2024</h5> 
+							<h4 class=""><b>Opleiding Basis Acceptance Commitment Therapie (ACT)</b></h4>
+							<h4 class="lower-case">Corporate training</h4>
+							<br>
 							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>2022 - 2023</h5> 
 							<h4 class=""><b>Opleiding schematherapie; basis en gevorderde</b></h4>
 							<h4 class="lower-case">King Nascholing</h4>
